@@ -1,3 +1,9 @@
+2017-01-31  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/79304
+	* error.c (dump_expr) <case COMPONENT_REF>: Don't print .
+	after ARROW_EXPR.
+
 2017-01-31  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/79298
